@@ -23,6 +23,7 @@ CURRENT VERSION:
 	strange nativenoresult popups in windows 7 fixed
 
 	Android 43 10,20,30sec online game timeouts added
+		   fixed: game sometimes auto-saving in a broken state while ai is playing
 	Android 42 images overlapping fix for samsung galaxy s4
 	Android 41 rules added
 		   no square brackets in main menu
